fixed spacing for footer

--- a/css/inner-page.css
+++ b/css/inner-page.css
@@ -585,6 +585,11 @@ div.sidebarTitle-holder {
   margin-top: 60px;
 }
 
+.footer-tags {
+  display: inline-flex !important;
+  padding: 0px 8px 0px 8px;
+}
+
 /*CSS for general styling of Chat/Messaging Indicator*/
 .indicator {
 
